# sop_chatbot

./: .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  microk8s  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  session.py
.github/workflows/: pipelines.yaml
charm/: LICENSE  README.md  charmcraft.yaml  spread.yaml
charm/src/: charm.py
charm/tests/integration/: test_charm.py
charm/tests/unit/: test_charm.py
migrations/: indexes.py  migrations.py
models/: companies.py  company.py  department.py  departments.py  exceptions.py  mixins.py  users.py
my-charm/: tox.ini
routes/: api.py  auth.py  dependencies.py  mixins.py
routes/admin/: admin.py  companies.py  departments.py  users.py
routes/admin_portal/: admin_portal.py
routes/manager/: companies.py  departments.py  managers.py  users.py
routes/user/: companies.py  current_user.py  departments.py  users.py
services/: auth.py
sop_chatbot/: config.py  main.py  session.py
sop_chatbot/migrations/: indexes.py  migration_00_01_01.py  migrations.py
sop_chatbot/models/: companies.py  departments.py  mixins.py  users.py
sop_chatbot/routes/: api.py  auth.py  dependencies.py
sop_chatbot/routes/admin/: admin.py  companies.py  departments.py  users.py
sop_chatbot/services/: auth.py
tests/: conftest.py  test_integrations.py  test_integratoin_tests.py
tests/fixtures/: auth_fixtures.py  company_fixtures.py  department_fixtures.py  mixins_fixtures.py  routes_fixtures.py  user_fixtures.py
tests/integration/: _test_integrations.py  test_integrations.py
tests/unit/: test_users.py
(+17 files in other folders)
