[project]
name = "sop-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bson==0.5.10",
    "fastapi==0.115.5",
    "google==3.0.0",
    "httpx==0.27.2",
    "motor==3.6.0",
    "orjson==3.10.12",
    "pydantic[email]==2.10.2",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.17",
    "requests==2.32.3",
    "tox>=4.23.2",
    "uvicorn==0.32.1",
]

[dependency-groups]
test = [
    "pytest-cov==6.0.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]
dev = [
    "mypy==1.13.0",
    "ruff==0.8.0",
]
