[project]
name = "sop-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.6",
    "google==3.0.0",
    "httpx==0.28.1",
    "motor==3.6.0",
    "ops>=2.17.1",
    "orjson==3.10.12",
    "pydantic[email]==2.10.4",
    "pyjwt==2.10.1",
    "pymongo==4.9.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "uvicorn==0.34.0",
]

[dependency-groups]
test = [
    "pytest-cov==6.0.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]
dev = [
    "mypy==1.13.0",
    "juju>=3.6.0.0",
    "ruff==0.8.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = 'single'
skip-magic-trailing-comma = false
docstring-code-line-length = 72
docstring-code-format = true

[tool.ruff.lint]
select = ["F", "E", "UP", "I", "W"]
